[gd_scene load_steps=3 format=3 uid="uid://jqj80x1fmo85"]

[ext_resource type="Script" path="res://src/ui/layouts/global_styles/scripts/path_content.gd" id="1_fmovq"]
[ext_resource type="PackedScene" uid="uid://cxbgd6gmhxcra" path="res://src/ui/components/scenes/button_with_icon.tscn" id="2_pqbqu"]

[node name="PathContent" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fmovq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Enable" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Enable"

[node name="Visible" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Visible"

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="None" parent="VBoxContainer/HFlowContainer" instance=ExtResource("2_pqbqu")]
layout_mode = 2
toggle_mode = true

[node name="Add" parent="VBoxContainer/HFlowContainer" instance=ExtResource("2_pqbqu")]
layout_mode = 2
toggle_mode = true

[node name="Remove" parent="VBoxContainer/HFlowContainer" instance=ExtResource("2_pqbqu")]
layout_mode = 2
toggle_mode = true

[node name="Edit" parent="VBoxContainer/HFlowContainer" instance=ExtResource("2_pqbqu")]
layout_mode = 2
toggle_mode = true

[node name="Manipulate" parent="VBoxContainer/HFlowContainer" instance=ExtResource("2_pqbqu")]
layout_mode = 2
toggle_mode = true

[connection signal="toggled" from="VBoxContainer/Enable" to="." method="_on_enable_toggled"]
[connection signal="toggled" from="VBoxContainer/Visible" to="." method="_on_show_toggled"]
[connection signal="toggled" from="VBoxContainer/HFlowContainer/None" to="." method="_on_none_toggled"]
[connection signal="toggled" from="VBoxContainer/HFlowContainer/Add" to="." method="_on_add_toggled"]
[connection signal="toggled" from="VBoxContainer/HFlowContainer/Remove" to="." method="_on_remove_toggled"]
[connection signal="toggled" from="VBoxContainer/HFlowContainer/Edit" to="." method="_on_edit_toggled"]
[connection signal="toggled" from="VBoxContainer/HFlowContainer/Manipulate" to="." method="_on_manipulate_toggled"]
